# lubeck-minimal-app

./: LICENSE  lubeck-minimal-app.cabal  stack.yaml
