name:                lubeck-minimal-app
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/LubeckFRP/lubeck-minimal-app#readme
license:             MIT
license-file:        LICENSE
author:              Hans Höglund
maintainer:          hans@hanshoglund.se
copyright:           2016 Hans Höglund
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base
                     , lubeck-web
  default-language:    Haskell2010

executable lubeck-minimal-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , lubeck-web
                     , lubeck-minimal-app
                     , virtual-dom
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LubeckFRP/lubeck-minimal-app
